Tentando fazer o crud de cupom